--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -88,6 +88,8 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   [HOML Ch. 8](https://bradleyboehmke.github.io/HOML/knn.html), [HOML Ch. 9](https://bradleyboehmke.github.io/HOML/DT.html)
 
-### Lab: 
+### Lab:
+
+-   [Link to .Rmd](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab4.Rmd)
 
 ### Discussion:
