--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -96,3 +96,4 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   Download discussion template [here](discussion/week4_skeleton.Rmd)
 -   Download discussion data [here](https://drive.google.com/drive/folders/1lkfNW4SpQXsGJI_U1WzocCVkibwFpbGd?usp=drive_link)
+-   Download completed discussion [here](discussion/week4.Rmd)
