--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -118,3 +118,4 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   Download discussion template [here](discussion/week5_skeleton.Rmd)
 -   Download discussion data [here](https://drive.google.com/drive/folders/15A89wGnu8l_hjR_DQLCwaNXjddOnRfn8?usp=drive_link)
+-   Download completed discussion [here](discussion/week5.Rmd)
