--- a/labs/Lab5_Demo.Rmd
+++ b/labs/Lab5_Demo.Rmd
@@ -31,18 +31,21 @@ Not doing the data exploration here in the interest of time and since we are fam
 ```{r initial_split}
 set.seed(808)
 #initial split of data, default 75/25
-churn_split 
-churn_test 
-churn_train 
+churn_split <- initial_split(churn)
+churn_test <- testing(churn_split)
+churn_train <- training(churn_split)
 ```
 
 We need to create a recipe and do the preprocessing by dummy coding the nominal variables and standardizing the numeric variables.
 
 ```{r recipe}
 #preprocessing
-knn_rec 
+knn_rec <- recipe(Attrition ~., data = churn_train) %>%
+  step_dummy(all_nominal(), -all_outcomes(), one_hot = T) %>%
+  step_normalize(all_numeric(), -all_outcomes()) %>%
+  prep()
 
-baked_train
+baked_train <- bake(knn_rec, churn_train)
 ```
 
 Recall: if you want to see the what the recipe is doing to your data, you can first prep() the recipe to estimate the parameters needed for each step and then bake(new_data = NULL) to pull out the training data with those steps applied.
@@ -50,24 +53,26 @@ Recall: if you want to see the what the recipe is doing to your data, you can fi
 Now the recipe is ready to be applied to the test data.
 
 ```{r bake_test}
-baked_test
+baked_test <- bake(knn_rec, churn_test)
 ```
 
 ##Specify the k-nearest neighbor model
 
 ```{r knn_spec}
-
-knn_spec 
+knn_spec <- nearest_neighbor(neighbors = 5) %>%
+  set_engine("kknn") %>%
+  set_mode("classification")
 ```
 
 ```{r knn_fit}
-knn_fit 
+knn_fit <- knn_spec %>%
+  fit(Attrition ~. , data = churn_train)
 ```
 
 ```{r cv}
 set.seed(808)
 # 5-fold CV on the training dataset (instead of 10 for in-class demo)
-cv_folds 
+cv_folds <- churn_train %>% vfold_cv(v=5)
 
 ```
 
@@ -76,26 +81,39 @@ We now have a recipe for processing the data, a model specification, and CV spli
 Let's put it all together in a workflow.
 
 ```{r knn_workflow}
-knn_workflow 
+knn_workflow <- workflow() %>%
+  add_model(knn_spec) %>%
+  add_recipe(knn_rec)
 ```
 Let's fit the resamples and carry out the cross-validation
 ```{r knn_res}
-knn_res 
+knn_res <- 
+  knn_workflow %>%
+  fit_resamples(
+    resamples= cv_folds,
+    control = control_resamples(save_pred = T)
+  )
 ```
 
 ```{r}
 # Check the performance
+knn_res %>% collect_metrics()
 ```
 
 Let's find the best value of k
 ```{r spec_with_tuning}
 # Define our KNN model with tuning
-knn_spec_tune 
+knn_spec_tune <- 
+  nearest_neighbor(neighbors = tune()) %>%
+  set_mode("classification") %>%
+  set_engine("kknn")
 ```
 
 ```{r wf_knn_tune}
 # Define a new workflow
-wf_knn_tune
+wf_knn_tune <- workflow() %>%
+  add_model(knn_spec_tune) %>%
+  add_recipe(knn_rec)
 ```
 
 This time before we fit the model we need to tell R which values to try for the parameter that we're tuning.
@@ -107,10 +125,15 @@ This tune_grid() is similar to fit_resamples() except that it takes an additiona
 We'll explore a few values of k: (1,5,10, 20, 30, 40, 50, 60, 70, 80, 90, 100)
 ```{r fit_knn_cv}
 # Fit the workflow on our predefined folds and a grid of hyperparameters
-fit_knn_cv 
+fit_knn_cv <- 
+  wf_knn_tune %>%
+  tune_grid(
+    cv_folds,
+    grid = data.frame(neighbors = c(1,5,seq(10,100, 10)))
+  )
 
 # Check the performance with collect_metrics()
-
+fit_knn_cv %>% collect_metrics()
 ```
 
 And finally, we will predict.
@@ -119,7 +142,8 @@ Use finalize_workflow() function wants (1) your initial workflow and (2) your be
 
 ```{r final_wf}
 # The final workflow for our KNN model. Finalize_workflow takes a workflow and a set of parameters.  In this case, that set is just the best value of k
-final_wf
+final_wf <- wf_knn_tune %>%
+  finalize_workflow(select_best(fit_knn_cv, metric= "accuracy"))
 
 # Check out the final workflow object.  Choosing accuracy for interpretability in this simple binary context
 final_wf
@@ -127,7 +151,7 @@ final_wf
 
 ```{r final_fit}
 # Fitting our final workflow
-final_fit 
+final_fit <- final_wf %>% fit(data = churn_train)
 # Examine the final workflow
 final_fit
 ```
@@ -135,7 +159,9 @@ final_fit
 And finally, we can predict onto the testing dataset.
 
 ```{r churn_pred}
-churn_pred 
+churn_pred <- final_fit %>% predict(new_data = churn_test)
+
+churn_pred %>% head()
 
 
 ```
@@ -146,7 +172,7 @@ This last_fit() approach streamlines your work (combining steps) and also lets y
 
 ```{r last_fit}
 # Write over 'final_fit' with this last_fit() approach
-final_fit 
+final_fit <- final_wf %>% last_fit(churn_split)
 # Collect metrics on the test data!
-final_fit
+final_fit %>% collect_metrics()
 ```
