add week 6 lab and discussion templates

--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -132,6 +132,11 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 ### Lab:
 
+-   [Demo](labs/Lab5_Demo2.Rmd)
+-   [Demo Key](labs/Lab5_Demo2_key.Rmd)
+
 ### Discussion:
 
-### 
+-   Download discussion template [here](discussion/week6_skeleton.Rmd)
+-   Download discussion data [here](https://drive.google.com/drive/folders/1zaSFHu2JCTK4dFtKJoSZ5d55SbHmMgc1?usp=sharing)
+-   Download completed discussion [here](discussion/week6.Rmd)
