--- a/discussion/week8.Rmd
+++ b/discussion/week8.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Week 6: Random Forest and Boosted Trees with Tidy Models'
+title: 'Week 8: Clustering with Tidy Models'
 author: "Allie Caughman"
 date: "2024-01-11"
 output: html_document
