--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -147,6 +147,7 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 ### Slides:
 
 -   Lecture: [Boosted Trees](https://ucsb.box.com/s/roha0hdtyc7548qkttvfidjj4o26s5n9)
+-   Lab: [Variables and Hyperparameters](https://ucsb.box.com/s/vekfqcoxebxwvri9ru1a9ovumxa3rnry)
 
 ### Assigned Reading:
 
@@ -156,9 +157,8 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   [Assignment](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab6.Rmd)
 
-```{=html}
 <!-- -->
-```
+
 -   [Elith et al. 2008](https://ucsb.box.com/s/05wbobx731r6tq0yvsqbtd6l3769sdvr)
 
 ### Discussion:
