--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -165,3 +165,17 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   Download discussion template [here](discussion/week7_skeleton.Rmd)
 -   Download discussion data [here](https://drive.google.com/drive/folders/1mOrwJmefHKRtTVJsSEgzQiENO4h_RLmd?usp=sharing)
+
+## Week 8
+
+### Slides:
+
+-   Lecture: [Clustering](https://ucsb.box.com/s/97f5w8opuzyxc064htu1gcjqiym9ssrb)
+
+### Assigned Reading:
+
+-   [HOML Ch. 20](https://bradleyboehmke.github.io/HOML/kmeans.html), [HOML Ch. 21](https://bradleyboehmke.github.io/HOML/hierarchical.html)
+
+### Lab:
+
+### Discussion:
