--- a/discussion/week8_skeleton.Rmd
+++ b/discussion/week8_skeleton.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Week 8: Clustering with Tidy Models'
+title: 'Week 8: Clustering with Tidy Clust'
 author: "Allie Caughman"
 date: "2024-01-11"
 output: html_document
