--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -180,6 +180,7 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 ### Lab:
 
 -   [Demo/Assignment](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab7_Demo_InClass.Rmd)
+    -   [Completed demo](https://github.com/MaRo406/eds-232-machine-learning/blob/main/labs/Lab7_Demo_InClass_complete.Rmd)
 
 ### Discussion:
 
