--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -201,6 +201,8 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   [Demo](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab8_Demo.Rmd)
 
+    -   [Key](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab8_Demo_key.Rmd)
+
 -   [Assignment](https://github.com/MaRo406/eds-232-machine-learning/blob/main/Lab8.Rmd)
 
     -   [Metadata](https://github.com/MaRo406/eds-232-machine-learning/blob/main/data/covtype_metadata.info)
