--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -186,6 +186,7 @@ Lecture 2: [Lab 2 - Linear Regression II](https://ucsb.box.com/s/us6c7w0ad4wllmk
 
 -   Download discussion template [here](discussion/week8_skeleton.Rmd)
 -   Download discussion data [here](https://drive.google.com/drive/folders/1kBySK4clcG5RvzmKpxzvPp_nW0Rqq-W6?usp=sharing)
+-   Download completed discussion [here](discussion/week8.Rmd)
 
 ## Week 9
 
