--- a/labs/Lab3/Lab3.ipynb
+++ b/labs/Lab3/Lab3.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ad7fbe2b-da60-4059-ae71-e322fecfd0db",
+   "metadata": {},
+   "source": [
+    "# Lab 3: Building a Spotify Song Classifier\n",
+    "\n",
+    "This week's lab is a musical lab. You'll be requesting data from the Spotify API and using it to build k-nearest neighbor and decision tree models.\n",
+    "\n",
+    "You have two options for completing this lab.\n",
+    "\n",
+    "**Option 1**: **Classify by users**. Build models that predict whether a given song will be in your collection vs. a partner in class. This requires that you were already a Spotify user so you have enough data to work with. You will download your data from the Spotify API and then exchange with another member of class.\n",
+    "\n",
+    "**Option 2**: **Classify by genres**. Build models that predict which genre a song belongs to. This will use a pre-existing Spotify dataset available from Kaggle.com (<https://www.kaggle.com/datasets/mrmorj/dataset-of-songs-in-spotify>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5df6dbfa-5b8f-42f3-b767-80fbc5cfd96e",
    "metadata": {},
    "source": [
+    "## Option 1: Classify by Users\n",
     "## Step 1: Setting up Spotify API\n",
-    "1. Create a Spotify account if you don't already have one: Spotify Signup.\n",
-    "2. Go to the Spotify Developer Dashboard and log in.\n",
-    "3. Click \"Create an App\" to generate a Client ID and Client Secret.\n",
-    "4. In your app settings, add http://localhost:8888/callback as a redirect URI.\n",
+    "In order to use the Spotify API you must have a Spotify account. If you don't have one, sign up for a free one here: <https://www.spotify.com/us/signup>\n",
     "\n",
-    "Install required spotipy library:"
+    "Once you have an account, go to Spotify for developers (<https://developer.spotify.com/>) and log in. Click the green \"Create a Client ID\" button to fill out the form to create an app create an app so you can access the API.\n",
+    "\n",
+    "On your developer dashboard page, click on the new app you just created. On the app's dashboard page you will find your Client ID just under the header name of your app. Click \"Show Client Secret\" to access your secondary Client ID. When you do this you'll be issued a Spotify client ID and client secret key.\n"
    ]
   },
   {
@@ -59,11 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec8e13bf-772d-4de8-a764-6ba574ebd221",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
@@ -84,7 +96,15 @@
    "metadata": {},
    "source": [
     "## Step 3: Data Collection\n",
-    "Option 1: Classify by Users\n",
+    "You can use fetch_tracks() and the sp.current_user_saved_tracks() method to request all your liked tracks. It would be good if you had at least 150-200 liked tracks so the model has enough data to work with. If you don't have enough liked tracks, you can instead use sp.current_user_recently_played(), and in that case grab at least 500 recently played tracks if you can.\n",
+    "\n",
+    "The Spotify API returns a dataframe of tracks and associated attributes. However, it will only return up to 50 (or 20) tracks at a time, so you will have to make multiple requests. Use a function to combine all your requests in one call.\n",
+    "\n",
+    "Once you have your tracks, familiarize yourself with this initial dataframe. You'll need to request some additional information for the analysis. If you give the API a list of track IDs using fetch_audio_features(), it will return an audio features dataframe of all the tracks and some attributes of them.\n",
+    "\n",
+    "CHECK THIS: These track audio features are the predictors we are interested in, but this dataframe doesn't have the actual names of the tracks. Append the 'track.name' column from your favorite tracks database.\n",
+    "\n",
+    "Find a class mate whose data you would like to use. Add your partner's data to your dataset. Create a new column that will contain the outcome variable that you will try to predict. This variable should contain two values that represent if the track came from your data set or your partner's.\n",
     "Fetch your liked tracks or recently played tracks:"
    ]
   },
