Init otter grader questions

--- a/labs/Lab1/dist-lab1/autograder/Lab1_template.ipynb
+++ b/labs/Lab1/dist-lab1/autograder/Lab1_template.ipynb
@@ -1,20 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "6c1e2794-8ac3-431a-85cd-c184167e142a",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21746b8a",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
    "source": [
-    "# ASSIGNMENT CONFIG\n",
-    "generate: true\n",
-    "export_cell: false\n",
-    "files:\n",
-    "    - data\n",
-    "tests:\n",
-    "    files: true\n",
-    "check_all_cell: false\n",
-    "seed:                                                             \n",
-    "  autograder_value: 11"
+    "# Initialize Otter\n",
+    "import otter\n",
+    "grader = otter.Notebook(\"Lab1_template.ipynb\")"
    ]
   },
   {
@@ -294,29 +292,26 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "079384ec-9b31-4ecd-962e-011a996fb2ee",
-   "metadata": {},
+   "cell_type": "markdown",
+   "id": "95ce69c7",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "# BEGIN QUESTION\n",
-    "name: q1a\n",
-    "manual: true\n",
-    "points: 2"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ed0d9833-4f9e-4beb-9138-d32135c9a436",
-   "metadata": {},
-   "source": [
-    "# BEGIN SOLUTION"
+    "<!-- BEGIN QUESTION -->\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
    "id": "54d728ab-ead2-41fc-8aea-45a7859a629b",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "otter_assign_solution_cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Prepare the Data for Machine Learning \n",
@@ -337,7 +332,11 @@
    "cell_type": "code",
    "execution_count": 104,
    "id": "d72e8250-05a7-4644-a59a-6ecb893d3295",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "otter_assign_solution_cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -440,53 +439,28 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a3b234c3-9e9e-4235-951b-f60621849519",
-   "metadata": {},
-   "source": [
-    "# END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "f9fe6dd7-f975-475a-9b7b-145c89621997",
-   "metadata": {},
-   "source": [
-    "# BEGIN TESTS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "6ada242c-0cb3-4e93-886b-4f7321541758",
-   "metadata": {},
+   "execution_count": null,
+   "id": "04dcbddd",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "assert X_train.index[0] == np.int64(249)\n",
-    "assert len(X_train) == 771"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "673754f8-b404-4088-b143-b46f18551a1c",
-   "metadata": {},
-   "source": [
-    "# END TESTS"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "bbb569f8-4eb1-494a-9508-08b84f04cd8b",
-   "metadata": {},
-   "source": [
-    "# END QUESTION"
+    "grader.check(\"q1a\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "217f625b-c0bd-4475-b39f-168a51a48360",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
     "### Step 4: Select your model\n",
     "\n",
     "We are going to use linear regression to predict the whole weight of oysters. Why is linear regression a good model to pick to achieve this goal? Answer in the markdown cell below."
