--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,8 @@ format:
     toc-location: left
 ---
 
+![](docs/img/MLRobotLearnBanner.png)
+
 ## Course Description
 
 Machine learning is a field of inquiry devoted to understanding and building methods that "learn," that is, methods that leverage data to improve performance on some set of tasks. In this course, we focus on the core concepts of machine learning that beginning ML researchers must know. We cover "classical machine learning" primarily using R and explore applications to environmental science. To understand broader concepts of artificial intelligence or deep learning, a strong fundamental knowledge of machine learning is indispensable.
@@ -58,7 +60,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 ## Course Topics
 
 |             |            |                                                                |
-|-------------|------------|----------------------------------------------------------------|
+|-------------|-------------|---------------------------------------------|
 | **Week \#** | **Dates**  | **Lecture**                                                    |
 | 1           | 1/7, 1/9   | Introduction, Linear Regression and ML Modeling Fundamentals I |
 | 2           | 1/14, 1/16 | Regularized Regression and ML Modeling Fundamentals II         |
